objects/ASI_CRM_Terms__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Section_Title__c</fullName>
        <label>Section Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Section__c</fullName>
        <label>Section</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Terms_Details_Sequence__c</fullName>
        <inlineHelpText>The sequence for the detail terms under the same section. This option will only apply to the fixed terms.</inlineHelpText>
        <label>Terms Details Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Terms_Details__c</fullName>
        <label>Terms Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TW_Apply_To__c</fullName>
        <label>Apply To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PAF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Terms</label>
    <listViews>
        <fullName>ASI_CRM_TW_Fixed_Terms</fullName>
        <columns>NAME</columns>
        <columns>ASI_TW_Apply_To__c</columns>
        <columns>ASI_CRM_Section__c</columns>
        <columns>ASI_CRM_Section_Title__c</columns>
        <columns>ASI_CRM_Terms_Details__c</columns>
        <columns>ASI_CRM_Terms_Details_Sequence__c</columns>
        <columns>ASI_CRM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Terms__c.ASI_CRM_TW_Terms</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>Fixed</value>
        </filters>
        <label>TW Fixed Terms</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Variable_Terms</fullName>
        <columns>NAME</columns>
        <columns>ASI_TW_Apply_To__c</columns>
        <columns>ASI_CRM_Section__c</columns>
        <columns>ASI_CRM_Section_Title__c</columns>
        <columns>ASI_CRM_Terms_Details__c</columns>
        <columns>ASI_CRM_Terms_Details_Sequence__c</columns>
        <columns>ASI_CRM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Terms__c.ASI_CRM_TW_Terms</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>Variable</value>
        </filters>
        <label>TW Variable Terms</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_Section__c</columns>
        <columns>ASI_CRM_Section_Title__c</columns>
        <columns>ASI_CRM_Inactive__c</columns>
        <columns>ASI_CRM_Terms_Details_Sequence__c</columns>
        <columns>ASI_CRM_Terms_Details__c</columns>
        <columns>ASI_TW_Apply_To__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TM-{00000000}</displayFormat>
        <label>Terms No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_Terms</fullName>
        <active>true</active>
        <label>TW Terms</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_TW_Terms_Detail_Seq_Required</fullName>
        <active>true</active>
        <description>The sequence of fixed terms detail is required for display in the PDF</description>
        <errorConditionFormula>AND(ISNULL(ASI_CRM_Terms_Details_Sequence__c),RecordType.Name ==&apos;TW Terms&apos;,TEXT(ASI_CRM_Type__c)  ==&apos;Fixed&apos;, TEXT(ASI_TW_Apply_To__c)==&apos;PAF&apos;)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Terms_Details_Sequence__c</errorDisplayField>
        <errorMessage>Fixed terms details  sequence is Required</errorMessage>
    </validationRules>
</CustomObject>